--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "lib-flexible": "^0.3.2",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.22.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
