--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "lib-flexible": "^0.3.2",
+    "md5": "^2.3.0",
     "qrcode.vue": "^1.7.0",
     "vant": "^2.10.9",
     "vue": "^2.6.11",
@@ -18,6 +19,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/md5": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
