--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
     "@platforms" : [ "android", "iPhone", "iPad" ],
-    "id" : "H59E35CA6", /*应用的标识*/
-    "name" : "ANFF EX", /*应用名称，程序桌面图标名称*/
+    "id" : "H568BB831", /*应用的标识*/
+    "name" : "PaBagPayy", /*应用名称，程序桌面图标名称*/
     "version" : {
-        "name" : "2.1.23", /*应用版本名称*/
-        "code" : 127
+        "name" : "1.0.0", /*应用版本名称*/
+        "code" : 10
     },
     "description" : "", /*应用描述信息*/
     "icons" : {
@@ -146,14 +146,14 @@
                         "settings-normal" : "unpackage/icon", /*iPhone4设置页面程序图标，分辨率：29x29*/
                         "settings-retina" : "unpackage/icon", /*iPhone4S/5/6设置页面程序图标，分辨率：58x58*/
                         "settings-retina8" : "unpackage/icon", /*iPhone6Plus设置页面程序图标，分辨率：87x87*/
-                        "app@2x" : "unpackage/icon/120x120.png",
-                        "app@3x" : "unpackage/icon/180x180.png",
-                        "spotlight@2x" : "unpackage/icon/80x80.png",
-                        "spotlight@3x" : "unpackage/icon/120x120.png",
-                        "settings@2x" : "unpackage/icon/58x58.png",
-                        "settings@3x" : "unpackage/icon/87x87.png",
-                        "notification@2x" : "unpackage/icon/40x40.png",
-                        "notification@3x" : "unpackage/icon/60x60.png"
+                        "app@2x" : "unpackage/icon/120.png",
+                        "app@3x" : "unpackage/icon/180.png",
+                        "spotlight@2x" : "unpackage/icon/80.png",
+                        "spotlight@3x" : "unpackage/icon/120.png",
+                        "settings@2x" : "unpackage/icon/58.png",
+                        "settings@3x" : "unpackage/icon/87.png",
+                        "notification@2x" : "unpackage/icon/40.png",
+                        "notification@3x" : "unpackage/icon/60.png"
                     },
                     "ipad" : {
                         "normal" : "", /*iPad普通屏幕程序图标，分辨率：72x72*/
@@ -166,25 +166,25 @@
                         "spotlight-retina7" : "", /*iPad iOS7高分屏Spotlight搜索程序图标，分辨率：80x80*/
                         "settings-normal" : "", /*iPad设置页面程序图标，分辨率：29x29*/
                         "settings-retina" : "", /*iPad高分屏设置页面程序图标，分辨率：58x58*/
-                        "app" : "unpackage/icon/76x76.png",
-                        "app@2x" : "unpackage/icon/152x152.png",
-                        "proapp@2x" : "unpackage/icon/167x167.png",
-                        "spotlight" : "unpackage/icon/40x40.png",
-                        "spotlight@2x" : "unpackage/icon/80x80.png",
-                        "settings" : "unpackage/icon/29x29.png",
-                        "settings@2x" : "unpackage/icon/58x58.png",
-                        "notification" : "unpackage/icon/20x20.png",
-                        "notification@2x" : "unpackage/icon/40x40.png"
+                        "app" : "unpackage/icon/76.png",
+                        "app@2x" : "unpackage/icon/152.png",
+                        "proapp@2x" : "unpackage/icon/167.png",
+                        "spotlight" : "unpackage/icon/40.png",
+                        "spotlight@2x" : "unpackage/icon/80.png",
+                        "settings" : "unpackage/icon/29.png",
+                        "settings@2x" : "unpackage/icon/58.png",
+                        "notification" : "unpackage/icon/20.png",
+                        "notification@2x" : "unpackage/icon/40.png"
                     },
-                    "appstore" : "unpackage/icon/1024x1024.png"
+                    "appstore" : "unpackage/icon/1024.png"
                 },
                 "android" : {
                     "mdpi" : "unpackage/icon", /*普通屏程序图标，分辨率：48x48*/
                     "ldpi" : "unpackage/icon", /*大屏程序图标，分辨率：48x48*/
-                    "hdpi" : "unpackage/icon/72x72.png", /*高分屏程序图标，分辨率：72x72*/
-                    "xhdpi" : "unpackage/icon/96x96.png", /*720P高分屏程序图标，分辨率：96x96*/
-                    "xxhdpi" : "unpackage/icon/144x144.png", /*1080P 高分屏程序图标，分辨率：144x144*/
-                    "xxxhdpi" : "unpackage/icon/192x192.png"
+                    "hdpi" : "unpackage/icon/72.png", /*高分屏程序图标，分辨率：72x72*/
+                    "xhdpi" : "unpackage/icon/96.png", /*720P高分屏程序图标，分辨率：96x96*/
+                    "xxhdpi" : "unpackage/icon/144.png", /*1080P 高分屏程序图标，分辨率：144x144*/
+                    "xxxhdpi" : "unpackage/icon/192.png"
                 }
             },
             "splashscreen" : {
