--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "@platforms" : [ "android", "iPhone", "iPad" ],
     "id" : "H568BB831", /*应用的标识*/
-    "name" : "PaBagPayy", /*应用名称，程序桌面图标名称*/
+    "name" : "BagPay", /*应用名称，程序桌面图标名称*/
     "version" : {
         "name" : "1.0.0", /*应用版本名称*/
         "code" : 10
