--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VUE_APP_MARK = "BagPay"
-VUE_APP_I18N_LOCALE = "zh-ch"
+VUE_APP_I18N_LOCALE = "zh-CN"
 VUE_APP_GOLANG_apiUrl = "https://api.bagpay.io/"
