--- a/dev.env
+++ b/dev.env
@@ -1,7 +1,7 @@
 VUE_APP_MARK = "BagPay"
-VUE_APP_I18N_LOCALE = "zh-ch"
+VUE_APP_I18N_LOCALE = "zh-CN"
 VUE_APP_GOLANG_apiUrl = "https://api.bagpay.io/"
 
 VUE_APP_MARK = "BagPay"
-VUE_APP_I18N_LOCALE = "zh-ch"
+VUE_APP_I18N_LOCALE = "zh-CN"
 VUE_APP_GOLANG_apiUrl = "https://bp-api.qdu.io/"
