--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "html2canvas": "^1.0.0-rc.7",
     "lib-flexible": "^0.3.2",
     "md5": "^2.3.0",
     "qrcode.vue": "^1.7.0",
