--- a/dev.env
+++ b/dev.env
@@ -5,3 +5,4 @@ VUE_APP_GOLANG_apiUrl = "https://api.bagpay.io/"
 VUE_APP_MARK = "BagPay"
 VUE_APP_I18N_LOCALE = "zh-CN"
 VUE_APP_GOLANG_apiUrl = "https://bp-api.qdu.io/"
+VUE_APP_SHOW_VCONSOLE = 1
