--- a/public/manifest.json
+++ b/public/manifest.json
@@ -127,7 +127,11 @@
                     "<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
                 ],
-                "autoSdkPermissions" : true
+                "autoSdkPermissions" : true,
+                "abiFilters":[  
+                    "armeabi-v7a",  
+                    "arm64-v8a"  
+                ]
             },
             /*使用Native.js调用原生安卓API需要使用到的系统权限*/
             "orientation" : [ "portrait-primary" ], /*应用支持的方向，portrait-primary：竖屏正方向；portrait-secondary：竖屏反方向；landscape-primary：横屏正方向；landscape-secondary：横屏反方向*/
