--- a/public/manifest.json
+++ b/public/manifest.json
@@ -128,6 +128,7 @@
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
                 ],
                 "autoSdkPermissions" : true,
+                "hardwareAccelerated" : true,
                 "abiFilters":[  
                     "armeabi-v7a",  
                     "arm64-v8a"  
