--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VUE_APP_MARK = "BagPay"
 VUE_APP_I18N_LOCALE = "zh-CN"
 VUE_APP_GOLANG_apiUrl = "https://api.bagpay.io/"
 VUE_APP_GOLANG_DEVURL = "https://bp-api.qdu.io/"
+VUE_APP_ORIGIN_URL = "https://bagpay.io/"
