--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "lib-flexible": "^0.3.2",
     "md5": "^2.3.0",
     "qrcode.vue": "^1.7.0",
+    "swiper": "^6.3.5",
     "vant": "^2.10.9",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-i18n": "^8.22.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
