--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-i18n": "^8.22.0",
     "vue-router": "^3.2.0",
+    "vue-telegram-login": "^2.1.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
