--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.20.0",
     "html2canvas": "^1.0.0-rc.7",
     "lib-flexible": "^0.3.2",
