--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.20.0",
     "html2canvas": "^1.0.0-rc.7",
+    "jsqr": "^1.3.1",
     "lib-flexible": "^0.3.2",
     "md5": "^2.3.0",
     "qrcode.vue": "^1.7.0",
