--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.20.0",
+    "echarts": "^4.9.0",
     "html2canvas": "^1.0.0-rc.7",
     "jsqr": "^1.3.1",
     "lib-flexible": "^0.3.2",
     "md5": "^2.3.0",
     "qrcode.vue": "^1.7.0",
     "swiper": "^6.3.5",
+    "v-charts": "^1.19.0",
     "vant": "^2.10.9",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
