--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.20.0",
-    "echarts": "^4.9.0",
+    "echarts": "^5.0.2",
     "html2canvas": "^1.0.0-rc.7",
     "jsqr": "^1.3.1",
     "lib-flexible": "^0.3.2",
@@ -24,6 +24,7 @@
     "vant": "^2.10.9",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-echarts": "^6.0.0-beta.2",
     "vue-i18n": "^8.22.0",
     "vue-router": "^3.2.0",
     "vue-telegram-login": "^2.1.0",
@@ -38,6 +39,7 @@
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/composition-api": "^1.0.0-rc.2",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/eslint-config-typescript": "^5.0.2",
     "cross-env": "^7.0.2",
